# storage/api-docs/api-docs.json
@@ -5,49 +5,17 @@
         "version": "0.1"
     },
     "paths": {
-        "/api/ibge": {},
-        "/api/ibge/municipios": {
+        "/api/v1/ibge/municipios/uf/{uf}": {
             "get": {
-                "operationId": "65e6d3e2ddc9fc70db691cbd02e804d8",
-                "responses": {
-                    "200": {
-                        "description": "Sucesso",
-                        "content": {
-                            "application/json": {
-                                "schema": {},
-                                "examples": {
-                                    "result": {
-                                        "summary": "json",
-                                        "value": {
-                                            "success": true
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    },
-                    "412 e 500": {
-                        "description": "Erro",
-                        "content": {
-                            "application/json": {
-                                "schema": {},
-                                "examples": {
-                                    "result": {
-                                        "summary": "json",
-                                        "value": {
-                                            "success": true
-                                        }
-                                    }
-                                }
-                            }
-                        }
+                "operationId": "dc5068f6fe68dab27c5f36e92598e094",
+                "parameters": [
+                    {
+                        "name": "uf",
+                        "in": "path",
+                        "description": "Buscar por estado",
+                        "required": true
                     }
-                }
-            }
-        },
-        "/api/ibge/municipios/{ibge}": {
-            "get": {
-                "operationId": "d47f297917b5e9cd3b2f114fc12ed264",
+                ],
                 "responses": {
                     "200": {
                         "description": "Sucesso",
@@ -57,9 +25,20 @@
                                 "examples": {
                                     "result": {
                                         "summary": "json",
-                                        "value": {
-                                            "success": true
-                                        }
+                                        "value": [
+                                            {
+                                                "name": "Abatiá",
+                                                "ibge_code": 4100103
+                                            },
+                                            {
+                                                "name": "Agudos do Sul",
+                                                "ibge_code": 4100301
+                                            },
+                                            {
+                                                "name": "Almirante Tamandaré",
+                                                "ibge_code": 4100400
+                                            }
+                                        ]
                                     }
                                 }
                             }
@@ -74,14 +53,14 @@
                                     "result": {
                                         "summary": "json",
                                         "value": {
-                                            "success": true
+                                            "message": "Não encontrado."
                                         }
                                     }
                                 }
                             }
                         }
                     },
-                    "412 e 500": {
+                    "422": {
                         "description": "Erro",
                         "content": {
                             "application/json": {
@@ -90,53 +69,19 @@
                                     "result": {
                                         "summary": "json",
                                         "value": {
-                                            "success": true
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/api/ibge/municipios/uf/{uf}": {
-            "get": {
-                "operationId": "f439681df6e01f2ba5a69b815d58cd7c",
-                "responses": {
-                    "200": {
-                        "description": "Sucesso",
-                        "content": {
-                            "application/json": {
-                                "schema": {},
-                                "examples": {
-                                    "result": {
-                                        "summary": "json",
-                                        "value": {
-                                            "success": true
+                                            "message": "O campo uf não é um UF válido.",
+                                            "errors": {
+                                                "uf": [
+                                                    "O campo uf não é um UF válido."
+                                                ]
+                                            }
                                         }
                                     }
                                 }
                             }
                         }
                     },
-                    "404": {
-                        "description": "Não Encontrado",
-                        "content": {
-                            "application/json": {
-                                "schema": {},
-                                "examples": {
-                                    "result": {
-                                        "summary": "json",
-                                        "value": {
-                                            "success": true
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    },
-                    "412 e 500": {
+                    "500": {
                         "description": "Erro",
                         "content": {
                             "application/json": {
@@ -145,117 +90,7 @@
                                     "result": {
                                         "summary": "json",
                                         "value": {
-                                            "success": true
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/api/ibge/uf": {
-            "get": {
-                "operationId": "0a1d37921f3b5fedd6919f1120d2247a",
-                "responses": {
-                    "200": {
-                        "description": "Sucesso",
-                        "content": {
-                            "application/json": {
-                                "schema": {},
-                                "examples": {
-                                    "result": {
-                                        "summary": "json",
-                                        "value": {
-                                            "success": true
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Não Encontrado",
-                        "content": {
-                            "application/json": {
-                                "schema": {},
-                                "examples": {
-                                    "result": {
-                                        "summary": "json",
-                                        "value": {
-                                            "success": true
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    },
-                    "412 e 500": {
-                        "description": "Erro",
-                        "content": {
-                            "application/json": {
-                                "schema": {},
-                                "examples": {
-                                    "result": {
-                                        "summary": "json",
-                                        "value": {
-                                            "success": true
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/api/ibge/uf/{code}": {
-            "get": {
-                "operationId": "85ceeee0b4c7052b956fb417f0a66e2d",
-                "responses": {
-                    "200": {
-                        "description": "Sucesso",
-                        "content": {
-                            "application/json": {
-                                "schema": {},
-                                "examples": {
-                                    "result": {
-                                        "summary": "json",
-                                        "value": {
-                                            "success": true
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Não Encontrado",
-                        "content": {
-                            "application/json": {
-                                "schema": {},
-                                "examples": {
-                                    "result": {
-                                        "summary": "json",
-                                        "value": {
-                                            "success": true
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    },
-                    "412 e 500": {
-                        "description": "Erro",
-                        "content": {
-                            "application/json": {
-                                "schema": {},
-                                "examples": {
-                                    "result": {
-                                        "summary": "json",
-                                        "value": {
-                                            "success": true
+                                            "message": "Server Error"
                                         }
                                     }
                                 }
